parser/src/snapshots/rustpython_parser__parser__tests__parse_class.snap
---
source: parser/src/parser.rs
expression: "parse_program(source, \"<test>\").unwrap()"
---
[
    ClassDef(
        StmtClassDef {
            name: Identifier(
                "Foo",
            ),
            bases: [
                Name(
                    ExprName {
                        id: Identifier(
                            "A",
                        ),
                        ctx: Load,
                        range: 10..11,
                    },
                ),
                Name(
                    ExprName {
                        id: Identifier(
                            "B",
                        ),
                        ctx: Load,
                        range: 13..14,
                    },
                ),
            ],
            keywords: [],
            body: [
                FunctionDef(
                    StmtFunctionDef {
                        name: Identifier(
                            "__init__",
                        ),
                        args: Arguments {
                            posonlyargs: [],
                            args: [
                                Arg {
                                    arg: Identifier(
                                        "self",
                                    ),
                                    annotation: None,
                                    type_comment: None,
                                    range: 31..35,
                                },
                            ],
                            vararg: None,
                            kwonlyargs: [],
                            kw_defaults: [],
                            kwarg: None,
                            defaults: [],
                            range: PhantomData<ruff_text_size::range::TextRange>,
                        },
                        body: [
                            Pass(
                                StmtPass {
                                    range: 40..44,
                                },
                            ),
                        ],
                        decorator_list: [],
                        returns: None,
                        type_comment: None,
                        range: 18..44,
                    },
                ),
                FunctionDef(
                    StmtFunctionDef {
                        name: Identifier(
                            "method_with_default",
                        ),
                        args: Arguments {
                            posonlyargs: [],
                            args: [
                                Arg {
                                    arg: Identifier(
                                        "self",
                                    ),
                                    annotation: None,
                                    type_comment: None,
                                    range: 70..74,
                                },
                                Arg {
                                    arg: Identifier(
                                        "arg",
                                    ),
                                    annotation: None,
                                    type_comment: None,
                                    range: 76..79,
                                },
                            ],
                            vararg: None,
                            kwonlyargs: [],
                            kw_defaults: [],
                            kwarg: None,
                            defaults: [
                                Constant(
                                    ExprConstant {
                                        value: Str(
                                            "default",
                                        ),
                                        kind: None,
                                        range: 80..89,
                                    },
                                ),
                            ],
                            range: PhantomData<ruff_text_size::range::TextRange>,
                        },
                        body: [
                            Pass(
                                StmtPass {
                                    range: 94..98,
                                },
                            ),
                        ],
                        decorator_list: [],
                        returns: None,
                        type_comment: None,
                        range: 46..98,
                    },
                ),
            ],
            decorator_list: [],
            range: 0..98,
        },
    ),
]
