parser/src/snapshots/rustpython_parser__parser__tests__parse_double_list_comprehension.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
ListComp(
    ExprListComp {
        elt: Name(
            ExprName {
                id: Identifier(
                    "x",
                ),
                ctx: Load,
                range: 1..2,
            },
        ),
        generators: [
            Comprehension {
                target: Tuple(
                    ExprTuple {
                        elts: [
                            Name(
                                ExprName {
                                    id: Identifier(
                                        "y",
                                    ),
                                    ctx: Store,
                                    range: 7..8,
                                },
                            ),
                            Name(
                                ExprName {
                                    id: Identifier(
                                        "y2",
                                    ),
                                    ctx: Store,
                                    range: 10..12,
                                },
                            ),
                        ],
                        ctx: Store,
                        range: 7..12,
                    },
                ),
                iter: Name(
                    ExprName {
                        id: Identifier(
                            "z",
                        ),
                        ctx: Load,
                        range: 16..17,
                    },
                ),
                ifs: [],
                is_async: false,
                range: PhantomData<ruff_text_size::range::TextRange>,
            },
            Comprehension {
                target: Name(
                    ExprName {
                        id: Identifier(
                            "a",
                        ),
                        ctx: Store,
                        range: 22..23,
                    },
                ),
                iter: Name(
                    ExprName {
                        id: Identifier(
                            "b",
                        ),
                        ctx: Load,
                        range: 27..28,
                    },
                ),
                ifs: [
                    Compare(
                        ExprCompare {
                            left: Name(
                                ExprName {
                                    id: Identifier(
                                        "a",
                                    ),
                                    ctx: Load,
                                    range: 32..33,
                                },
                            ),
                            ops: [
                                Lt,
                            ],
                            comparators: [
                                Constant(
                                    ExprConstant {
                                        value: Int(
                                            5,
                                        ),
                                        kind: None,
                                        range: 36..37,
                                    },
                                ),
                            ],
                            range: 32..37,
                        },
                    ),
                    Compare(
                        ExprCompare {
                            left: Name(
                                ExprName {
                                    id: Identifier(
                                        "a",
                                    ),
                                    ctx: Load,
                                    range: 41..42,
                                },
                            ),
                            ops: [
                                Gt,
                            ],
                            comparators: [
                                Constant(
                                    ExprConstant {
                                        value: Int(
                                            10,
                                        ),
                                        kind: None,
                                        range: 45..47,
                                    },
                                ),
                            ],
                            range: 41..47,
                        },
                    ),
                ],
                is_async: false,
                range: PhantomData<ruff_text_size::range::TextRange>,
            },
        ],
        range: 0..48,
    },
)
