parser/src/snapshots/rustpython_parser__parser__tests__parse_lambda.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            value: Lambda(
                ExprLambda {
                    args: Arguments {
                        posonlyargs: [],
                        args: [
                            Arg {
                                arg: Identifier(
                                    "x",
                                ),
                                annotation: None,
                                type_comment: None,
                                range: 7..8,
                            },
                            Arg {
                                arg: Identifier(
                                    "y",
                                ),
                                annotation: None,
                                type_comment: None,
                                range: 10..11,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kw_defaults: [],
                        kwarg: None,
                        defaults: [],
                        range: (),
                    },
                    body: BinOp(
                        ExprBinOp {
                            left: Name(
                                ExprName {
                                    id: Identifier(
                                        "x",
                                    ),
                                    ctx: Load,
                                    range: 13..14,
                                },
                            ),
                            op: Mult,
                            right: Name(
                                ExprName {
                                    id: Identifier(
                                        "y",
                                    ),
                                    ctx: Load,
                                    range: 17..18,
                                },
                            ),
                            range: 13..18,
                        },
                    ),
                    range: 0..18,
                },
            ),
            range: 0..18,
        },
    ),
]
