parser/src/snapshots/rustpython_parser__parser__tests__parse_named_expression_generator_comprehension.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
GeneratorExp(
    ExprGeneratorExp {
        elt: NamedExpr(
            ExprNamedExpr {
                target: Name(
                    ExprName {
                        id: Identifier(
                            "x",
                        ),
                        ctx: Store,
                        range: 1..2,
                    },
                ),
                value: BinOp(
                    ExprBinOp {
                        left: Name(
                            ExprName {
                                id: Identifier(
                                    "y",
                                ),
                                ctx: Load,
                                range: 6..7,
                            },
                        ),
                        op: Add,
                        right: Constant(
                            ExprConstant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                                range: 10..11,
                            },
                        ),
                        range: 6..11,
                    },
                ),
                range: 1..11,
            },
        ),
        generators: [
            Comprehension {
                target: Name(
                    ExprName {
                        id: Identifier(
                            "y",
                        ),
                        ctx: Store,
                        range: 16..17,
                    },
                ),
                iter: Name(
                    ExprName {
                        id: Identifier(
                            "z",
                        ),
                        ctx: Load,
                        range: 21..22,
                    },
                ),
                ifs: [],
                is_async: false,
                range: (),
            },
        ],
        range: 0..23,
    },
)
