parser/src/snapshots/rustpython_parser__parser__tests__parse_string.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            value: Constant(
                ExprConstant {
                    value: Str(
                        "Hello world",
                    ),
                    kind: None,
                    range: 0..13,
                },
            ),
            range: 0..13,
        },
    ),
]
